<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detection</name>
  <version>2.2.18</version>
  <description>Obstacle avoidance system for 3d vision project</description>
  <maintainer email="godus@postech.ac.kr">Haeyeon Gim</maintainer>
  <author email="godus@postech.ac.kr">Haeyeon Gim</author>
  <license>POSTECH</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend> 
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
